--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<h1> nuestro perfil </h1>
 		<p> nicolas: vivo en una casa  </p>
 		<p> abigail: yo en otra </p>
-		<img src="imagenes/auto.webp" width="200" height="200">
-		<img src="imagenes/harry.webp" width="200" height="200">
+		<img src="imagenes\auto.webp" width="200" height="200">
+		<img src="imagenes\harry.webp" width="200" height="200">
 
 		<table border="2">
 		<tr>
@@ -32,10 +32,10 @@
 			<th> color fav </th>
 		</tr>
 		<tr>
-			<td> 2934987834 </td> <td> 22 </td> <td> <img src="imagenes/bordo.webp" width="100" height="100"> </td>
+			<td> 2934987834 </td> <td> 22 </td> <td> <img src="imagenes\bordo.webp" width="100" height="100"> </td>
 		</tr>
 		<tr>
-			<td> 2213492740 </td> <td> 18 </td> <td> <img src="imagenes/lila.webp" width="100" height="100"> </td>
+			<td> 2213492740 </td> <td> 18 </td> <td> <img src="imagenes\lila.webp" width="100" height="100"> </td>
 		</tr>
         	</table>
 		
